Fixed the bottom bar issue (it originally would jump up when screen height is large)

--- a/CSS/all-together.css
+++ b/CSS/all-together.css
@@ -13,7 +13,7 @@ body {
 .main-area {
     padding: 2em;
     background-color: lightpink;
-    min-height: 520px;
+    /*min-height: 520px;*/
 }
 
 .slider{
